--- a/app.json
+++ b/app.json
@@ -31,6 +31,11 @@
             "required": true,
             "value": "false"
         },
+        "ALIVE_LOGO": {
+            "description": "Alive message logo. Enter your image link below to change the image. (Upload the image you want to https://imgbb.com and put that link here.)",
+            "required": true,
+            "value": "https://i.ibb.co/h26VWqL/CyberBot.jpg"
+        },
         "HANDLERS": {
             "description": "Komutlar için. For commands.",
             "required": true,
