--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "description": "Cyber Army project - UserBot made for WhatsApp.",
     "logo": "https://i.ibb.co/h26VWqL/CyberBot.jpg",
     "keywords": ["whatsapp", "userbot", "Cyber", "CyberBot", "bot", "api", "ai"],
-    "repository": "https://github.com/Aqua-Snake/CBot",
+    "repository": "https://github.com/Aqua-Snake/CBOT",
     "website":   "https://t.me/Aqua_Snake",
     "success_url": "https://t.me/cyber_bot_support",
     "stack": "container",
